Fixed overflow on media page

--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -4,6 +4,7 @@
   margin:               0;
   position:             relative;
   z-index:              50;
+  overflow-x:           hidden;
 }
 
 .container .wrapper {
